fix: editor performance & horizontal scroll

--- a/src/pages/PlaygroundPage/PlaygroundPage.module.scss
+++ b/src/pages/PlaygroundPage/PlaygroundPage.module.scss
@@ -9,6 +9,7 @@
   flex-direction: row;
   gap: 10px;
   position: relative;
+  overflow-x: hidden;
 }
 .label {
   margin-left: 8px;
@@ -106,4 +107,8 @@
   display: flex;
   flex-direction: column;
   z-index: 20;
+  transform: translateX(100%);
+  &-show {
+    transform: translateX(0);
+  }
 }
